// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeComponent render should render a container 1`] = `
<br-meta-stub>
  <br-node-container-stub>
    <br-node-component-stub component="[object Object]"></br-node-component-stub>
    <br-node-component-stub component="[object Object]"></br-node-component-stub>
  </br-node-container-stub>
</br-meta-stub>
`;

exports[`BrNodeComponent render should render a container item 1`] = `
<br-meta-stub>
  <br-node-container-item-stub></br-node-container-item-stub>
</br-meta-stub>
`;

exports[`BrNodeComponent render should render a mapped component 1`] = `
<br-meta-stub>
  <somecomponent-stub component="[object Object]" page="[object Object]"></somecomponent-stub>
</br-meta-stub>
`;

exports[`BrNodeComponent render should render children 1`] = `
<br-meta-stub>
  <br-node-component-stub component="[object Object]"></br-node-component-stub>
  <br-node-component-stub component="[object Object]"></br-node-component-stub>
</br-meta-stub>
`;
